--- a/.env.template
+++ b/.env.template
@@ -2,8 +2,8 @@ GRPC_PORT=58888
 
 LOG_FORMAT=text
 
-RABBITMQ_HOST=toc-rabbitmq
+RABBITMQ_HOST=127.0.0.1
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=password
 RABBITMQ_EXCHANGE=toc-fugle
-RABBITMQ_URL=amqp://admin:password@toc-rabbitmq:5672/%2f
+RABBITMQ_URL=amqp://admin:password@127.0.0.1:5672/%2f
