--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.4
 importlib-metadata==6.0.0
 keyring==23.5.0
 keyrings.cryptfile==1.3.8
+numpy==1.24.1
 pika==1.3.1
 prometheus-client==0.15.0
 protobuf==4.21.12
