feat(config): add config template, api key, secret, fugle login

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,7 @@ RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=password
 RABBITMQ_EXCHANGE=toc-fugle
 RABBITMQ_URL=amqp://admin:password@127.0.0.1:5672/%2f
+
+API_KEY=
+API_SECRET=
+API_USER=
