fix(hook): fix lint hook fail

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,22 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-shebang-scripts-are-executable
-      - id: detect-private-key
-  - repo: local
-    hooks:
-      - id: pylint
-        name: pylint
-        language: system
-        entry: ./scripts/hook_pylint.sh
-      - id: mypy
-        name: mypy
-        language: system
-        entry: ./scripts/hook_mypy.sh
-  - repo: https://github.com/psf/black
-    rev: 22.12.0
-    hooks:
-      - id: black
-        exclude: pb
+    - repo: local
+      hooks:
+          - id: lint
+            name: lint
+            language: system
+            entry: ./scripts/hook_lint.sh
+
+    - repo: https://github.com/psf/black
+      rev: 22.12.0
+      hooks:
+          - id: black
+            exclude: pb
+
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.4.0
+      hooks:
+          - id: trailing-whitespace
+          - id: end-of-file-fixer
+          - id: check-yaml
+          - id: check-shebang-scripts-are-executable
+          - id: detect-private-key
