--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ grpcio==1.51.1
 grpcio-tools==1.51.1
 idna==3.4
 importlib-metadata==6.0.0
+Jinja2==3.1.2
 keyring==23.5.0
 keyrings.cryptfile==1.3.8
+MarkupSafe==2.1.2
 numpy==1.24.1
 pika==1.3.1
 prometheus-client==0.15.0
