--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ LOG_FORMAT=text
 RABBITMQ_HOST=127.0.0.1
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=password
-RABBITMQ_EXCHANGE=toc-fugle
+RABBITMQ_EXCHANGE=toc
 RABBITMQ_URL=amqp://admin:password@127.0.0.1:5672/%2f
 
 API_KEY=
