--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,16 @@ jobs:
                   tags: |
                       ${{ env.REGISTRY }}/${{ env.REPOSITORY_LC }}:${{ env.SHORT_SHA }}
                       ${{ env.REGISTRY }}/${{ env.REPOSITORY_LC }}:latest
+
+    Trigger-Deployment:
+        needs: Build
+        runs-on: ubuntu-latest
+        steps:
+            - name: Trigger
+              run: |
+                  curl -X POST \
+                      -H "Accept: application/vnd.github+json" \
+                      -H "Authorization: Bearer ${{ secrets.ACTIONS_KEY }}"\
+                      https://api.github.com/repos/ToC-Taiwan/ansible-machine/dispatches \
+                      -d '{"event_type":"deploy-trader"}'
+            - uses: actions/checkout@v3
