--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ RABBITMQ_HOST=127.0.0.1
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=password
 RABBITMQ_EXCHANGE=toc
-RABBITMQ_URL=amqp://admin:password@127.0.0.1:5672/%2f
+RABBITMQ_URL=amqp://admin:password@127.0.0.1:5672/%2f?heartbeat=0
 
 API_KEY=
 API_SECRET=
